--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
   <!-- demo app -->
   <script src="assets/js/pages/demo.dashboard.js"></script>
   <!-- end demo js-->
+  <script src="node_modules/chart.js/src/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 </body>
 
 </html>
